css/main.css
body {
    margin: 0;
    height: 0;
    /*overflow-x: hidden;*/
    font-family: Roboto, sans-serif;
    background-color: rgb(242, 242, 242);
    font-size: 14px;
}

a {
    text-decoration: none;
}

.btn {
    border: none;
    padding: 4%;
    margin: 5%;
    border-radius: 5px;
}

.wrap {
    padding: 0;
    margin: 0;
}

.btn-primary {
    background-color: #0078ff;
    color: white;
}

/* Mobile Header */

#mobile-header {
    position: fixed;
    bottom: 0;
    width: 100vw;
    display: none;
    background-color: white;
    flex-direction: row;
    justify-content: space-between;
    min-height: 50px;
    align-items: center;
    padding-left: 1%;
    padding-right: 1%;
}

#mobile-header > div {
    text-align: center;
    width: 20%;
}

/* Primary Header CSS start*/

#primary-header {
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    margin: 0;
    padding-top: 10px;
    background-color: #333545;
}

#primary-header > div {
    display: inline-block;
    min-height: 45px;
    line-height: 45px;
    vertical-align: top;
}

#logo-section,
#auth-section {
    width: 12%;
}

#logo-section {
    margin-top: 5px;
}

#search-section {
    width: 75%;
}

#logo-section {
    text-align: center;
}

#search-box {
    width: 98%;
    padding: 0 0.8%;
    background-color: white;
    border-radius: 5px;
}

#primary-nav {
    width: 100%;
    border: 1px solid #333545;
}

#primary-nav > div {
    display: inline-block;
}

#navbar-left,
#navbar-right {
    width: 48%;
}

#navbar-right {
    position: relative;
    left: 15%;
}

#navbar-left a {
    color: white;
    padding: 0 1.5%;
}

#navbar-right a {
    color: rgba(255, 255, 255, .5);
    padding: 0 1%;
    font-size: 13px;
}

#search-box i {
    width: 3%;
}

#search-box input {
    outline: none;
    border: none;
    width: 90%;
    padding-left: 1%;
}

/* Primary Header CSS ends*/

/* Aside and Overlay CSS start*/

#overlay {
    position: fixed;
    display: none;
    width: 100%;
    height: 100%;
    z-index: 1;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.5);
}

#user-menu {
    display: none;
    background-color: white;
    position: fixed;
    width: 25%;
    height: 100vh;
    right: 0;
    bottom: 0;
    z-index: 3;
    transition: visibility 0s, opacity 0.5s linear;
}

#menu-heading {
    padding: 10%;
    width: 100%;
    background-color: #333545;
    color: white;
}

#menu-heading h4 {
    font-weight: 600;
    margin: 0;
    padding: 0;
}

#menu-heading > div {
    display: inline-block;
}

#heading-left {
    width: 10%;
    margin: auto 2%;
}

#heading-left p {
    border-radius: 25px;
    padding: 15%;
    margin: auto 2%;
    border: 1px solid dodgerblue;
}

#heading-right {
    margin: auto 2%;
}

#heading-right h4 {
    margin: 0;
    padding: 0;
    font-weight: 600;
}

#heading-right p {
    margin: 0;
    padding: 0;
}

#user-menu ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

#user-menu ul li {
    width: 100%;
}

#user-menu ul li a {
    display: block;
    width: 100%;
    padding: 6%;
    color: #666;
    font-size: 12px;
    border-bottom: 1px solid #f1f1f1;
}

#user-menu ul li a:hover {
    background-color: #D5D8DC;
}

/* User Menu CSS ends*/

/*Image Slider CSS Start*/
.slider {
    background-color: white;
    position: relative;
    width: 400%;
    height: 40%;
    /*margin: 10px 0;*/
    animation-name: bookmyshow;
    animation-duration: 30s;
    animation-iteration-count: infinite;
}

.slider img {
    /*border-radius: 10px;*/
    float: left;
    width: 25%;
    height: auto;
    padding: 0;
}

@keyframes bookmyshow {
    0% {
        left: 0;
    }
    20% {
        left: -100%;
    }
    40% {
        left: -200%;
    }
    60% {
        left: -300%;
    }
    100% {
        left: 0;
    }
}

/*Content  CSS Starts*/
#content {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: stretch;
}

.widget {
    width: 20%;
    margin: 0 4%;
}

#movie-widget {
    width: 70%;
}

.widget-list h4,
.widget p {
    margin: 5px;
    font-size: 14px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.widget-heading {
    margin-bottom: 1px;
}

.widget-card {
    background-color: white;
    padding: 2%;
    margin-bottom: 1px;
}

.movie-widget-card {
    border-radius: 8px;
    width: 80%;
    height: auto;
    margin: 2%;
}

.movie-widget-list {
    display: flex;
    width: 100%;
}

.movie-widget-card .movie-widget-card-footer {
    padding: 10px;
    display: flex;
    flex-direction: row;
    align-items: stretch;
    background-color: white;
    border-bottom-right-radius: 10px;
    border-bottom-left-radius: 10px;
}

.movie-widget-card .movie-widget-card-footer h4,
.movie-widget-card .movie-widget-card-footer p {
    margin: 0 10%;
    font-size: 14px;
}

.movie-widget-card .movie-widget-card-footer i {
    color: red;
}

.movie-widget-card img {
    width: 100%;
    height: auto;
}

/*Footer CSS*/

/* Media Queries Desktop Approach */

@media (min-width: 793px) and (max-width: 1200px) {
    #primary-nav {
        display: none !important;
    }
}

@media (min-width: 708px) and ( max-width: 792px) {
    #logo-section {
        width: 18%;
    }

    #mobile-header {
        display: flex;
    }

    #search-section,
    #primary-nav,
    #auth-section,
    .widget {
        display: none !important;
    }

    #movie-widget {
        width: 90%;
        margin: 0 5%;
    }
}

@media (min-width: 727px) and ( max-width: 707px) {
    #logo-section {
        width: 24%;
    }

    #search-section,
    #primary-nav,
    .widget {
        display: none !important;
    }

    #mobile-header {
        display: flex;
    }

    #auth-section {
        position: absolute;
        right: 0;
    }

    #movie-widget {
        width: 90%;
        margin: 0 5%;
    }
}

@media (min-width: 320px) and  (max-width: 726px) {
    #logo-section {
        width: 25%;
    }

    #search-section,
    #auth-section,
    #primary-nav,
    .widget,
    .movie-widget-list div:nth-child(3) {
        display: none !important;
    }

    #mobile-header {
        display: flex;
    }

    #movie-widget {
        width: 90%;
        margin: 0 5%;
    }

    #user-menu {
        width: 75%;
    }

    .slider {
        margin: 0;
    }
}

